fix archive bug

--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
     <div class="index-content framed">
       <h1 id="joy-to-you">joy to you</h1>
 <p>This site is dedicated to all the <code>A Touch of Light</code> weekly email teachings from Nayaswami <code>Jyotish</code> and Nayaswami <code>Devi</code>.</p>
-<p><a href="archive">view archive</a></p>
+<p><a href="posts/archive">view archive</a></p>
 <hr>
 <h1 id="service">service</h1>
 <p>email listserv - easier communication within sanghas</p>
